[gd_scene load_steps=2 format=3 uid="uid://cnoim1exi0vd2"]

[ext_resource type="Script" uid="uid://dgcqj0ilana5f" path="res://Scripts/WorldScripts/pause_menu_component.gd" id="1_pause_component"]

[node name="PauseMenuComponent" type="CanvasLayer"]
script = ExtResource("1_pause_component")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/MainContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Control/MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="SettingsButton" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="AchievementsButton" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Achievements"

[node name="Multiplayer" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Control/MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit Game"
